objects/Application_Log__c.object
<CustomObject>
    <description>Object that store application log message ranging from informational to errors/debug messages.</description>
    <fields>
        <fullName>Actioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has action been taken on this log record?</description>
        <label>Actioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age in days of the record. Enables batch jobs to delete old records easily.</description>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The age in days of the record.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callout_End_Point__c</fullName>
        <description>Callout end point url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callout_Request_Body__c</fullName>
        <description>Callout Http request body</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callout_Response_Body__c</fullName>
        <description>Callout Http response body</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callout_Status_Code__c</fullName>
        <description>Callout HTTP status code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Callout Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The log message (either an error message or info message).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The log message (either an error message or info message).</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>The source where the log is originated from</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Batch Apex</fullName>
                </value>
                <value>
                    <fullName>Lightning Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The record id of the related object that initiated the log record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The record id of the related object that initiated the log record.</inlineHelpText>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Information__c</fullName>
        <description>The salesforce sObject for the reference id (e.g ref id 0000e9kkks is a Contact)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The salesforce sObject for the Reference Id.</inlineHelpText>
        <label>Reference Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Function__c</fullName>
        <description>The source function name of the error (e.g. getContactInformation).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The source function name of the error (e.g. getContactInformation).</inlineHelpText>
        <label>Source Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The name of the utility class, trigger or flow that the message originated from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>The original stack trace for exceptions.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The original stack trace for exceptions.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <description>The time in milliseconds taken as part of the processing (used to record time taken for callouts and batch jobs).</description>
        <label>Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Identifies the time of the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identifies the time of the transaction.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Application Log Type</description>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Callout</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                    <default>true</default>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APPLG-{0000000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>